// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when applied with \`algorithm\` option matches snapshot for \`gzip\` value ({String}): assets 1`] = `
Array [
  Array [
    "0.async.dbe59b7ea0e1a63e45d4.js",
    130,
  ],
  Array [
    "0.async.dbe59b7ea0e1a63e45d4.js.gz",
    117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png.gz",
    73160,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg.gz",
    393,
  ],
  Array [
    "js.b329671af0217355535e.js",
    10267,
  ],
  Array [
    "js.b329671af0217355535e.js.gz",
    2798,
  ],
]
`;

exports[`when applied with \`algorithm\` option matches snapshot for \`gzip\` value ({String}): errors 1`] = `Array []`;

exports[`when applied with \`algorithm\` option matches snapshot for \`gzip\` value ({String}): warnings 1`] = `Array []`;

exports[`when applied with \`algorithm\` option matches snapshot for \`unknown\` value ({String}) 1`] = `"Algorithm not found in zlib"`;

exports[`when applied with \`algorithm\` option matches snapshot for custom function ({Function}): assets 1`] = `
Array [
  Array [
    "0.async.dbe59b7ea0e1a63e45d4.js",
    130,
  ],
  Array [
    "0.async.dbe59b7ea0e1a63e45d4.js.gz",
    130,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png.gz",
    78117,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg.gz",
    672,
  ],
  Array [
    "js.b329671af0217355535e.js",
    10267,
  ],
  Array [
    "js.b329671af0217355535e.js.gz",
    10267,
  ],
]
`;

exports[`when applied with \`algorithm\` option matches snapshot for custom function ({Function}): compressionOptions 1`] = `Object {}`;

exports[`when applied with \`algorithm\` option matches snapshot for custom function ({Function}): compressionOptions 2`] = `Object {}`;

exports[`when applied with \`algorithm\` option matches snapshot for custom function ({Function}): compressionOptions 3`] = `Object {}`;

exports[`when applied with \`algorithm\` option matches snapshot for custom function ({Function}): compressionOptions 4`] = `Object {}`;

exports[`when applied with \`algorithm\` option matches snapshot for custom function ({Function}): errors 1`] = `Array []`;

exports[`when applied with \`algorithm\` option matches snapshot for custom function ({Function}): warnings 1`] = `Array []`;

exports[`when applied with \`algorithm\` option matches snapshot for custom function with error ({Function}): assets 1`] = `
Array [
  Array [
    "0.async.dbe59b7ea0e1a63e45d4.js",
    130,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "js.b329671af0217355535e.js",
    10267,
  ],
]
`;

exports[`when applied with \`algorithm\` option matches snapshot for custom function with error ({Function}): compressionOptions 1`] = `Object {}`;

exports[`when applied with \`algorithm\` option matches snapshot for custom function with error ({Function}): compressionOptions 2`] = `Object {}`;

exports[`when applied with \`algorithm\` option matches snapshot for custom function with error ({Function}): compressionOptions 3`] = `Object {}`;

exports[`when applied with \`algorithm\` option matches snapshot for custom function with error ({Function}): compressionOptions 4`] = `Object {}`;

exports[`when applied with \`algorithm\` option matches snapshot for custom function with error ({Function}): errors 1`] = `
Array [
  "Error",
  "Error",
  "Error",
  "Error",
]
`;

exports[`when applied with \`algorithm\` option matches snapshot for custom function with error ({Function}): warnings 1`] = `Array []`;
